# rt-everywhere

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: desktop.yml
core/: CMakeLists.txt  rt_everywhere.c  rt_everywhere.h
core/image/: bmp.c  bmp.h
core/include/: rt_everywhere.hpp  rte_state.hpp
core/include/data/: rte_fragment.hpp  rte_ray.hpp
core/include/pipeline/: rte_framebuffer.hpp  rte_rendertarget.hpp  rte_shader.hpp
core/include/scene/: rte_aabb.hpp  rte_bvh.hpp  rte_camera.hpp  rte_light.hpp  rte_primitive.hpp  rte_scene.hpp  rte_transform.hpp
core/lua/: init.lua  shader_prototype.lua
core/lua/shaders/: checker_ground.lua
core/math/: crand.c  crand.h  matrices.c  matrices.h  ray.h  real.c  real.h  vectors.c  vectors.h
core/shapes/: aabb.c  aabb.h  sphere.c  sphere.h
core/source/: rte_state.cpp
core/source/data/: rte_fragment.cpp  rte_ray.cpp  rte_transform.cpp
core/source/pipeline/: rte_default_shader.cpp  rte_default_shader.hpp  rte_ground_shader.cpp  rte_ground_shader.hpp  rte_lua_shader.cpp  rte_lua_shader.hpp  rte_mirror_shader.cpp  rte_mirror_shader.hpp
core/source/scene/: rte_aabb.cpp  rte_camera.cpp  rte_primitive.cpp  rte_scene.cpp  rte_transform.cpp
old-core/: CMakeLists.txt  rt_everywhere.h
old-core/image/: bmp.h
old-core/math/: crand.c  real.c  real.h  vectors.c  vectors.h
old-core/shapes/: sphere.c  sphere.h
